AC_INIT(anitmt-calc/anitmt.cpp)
AM_INIT_AUTOMAKE(anitmt, 0.1.9)
AC_PROG_CC
AC_PROG_CXX
#dnl check gcc version:
#gccvers="`$CXX -v 2>&1 | tail -1`"
#if test "${gccvers/" *"/}" = "gcc" ; then
#  # we're actually using gcc, so check version
#  # this test is not perfect as it can be tricked using "gcc -Vxyz"
#  echo -n "checking $CXX version... "
#  gccvers="${gccvers/"*version "/}"
#  echo "$gccvers"
#  if test "${gccvers:0:1}" -lt 3 ; then 
#    echo "** Sorry, you need at least gcc 3.0 to compile anitmt.     **"
#    echo "** All previous versions have bugs dealing with templates. **"
#    exit 1
#  fi
#fi
#unset gccvers
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX
if test "$LEX" != "flex"; then echo "Warning: You need flex to generate new lexer sources!"; LEX=; fi
if test "$YACC" != "bison -y"; then echo "Warning: You need "bison -y" to generate new parser source!"; export YACC=; fi
AC_CONFIG_SUBDIRS(hlib)
AC_OUTPUT(
	Makefile
	lib/Makefile
	lib/message/Makefile
	lib/val/Makefile
	lib/solve/Makefile
	lib/proptree/Makefile
	lib/utl/Makefile
	lib/par/Makefile
	lib/param/Makefile
	lib/flex/Makefile
	anitmt-calc/Makefile
	anitmt-calc/input/Makefile
	anitmt-calc/input/adl2/Makefile
	anitmt-calc/output/Makefile
	anitmt-calc/output/lib/Makefile
	anitmt-calc/output/raw/Makefile
	anitmt-calc/output/pov/Makefile
	anitmt-calc/funcgen/Makefile
	anitmt-calc/functionality/Makefile
	anitmt-view/Makefile
	anitmt-view/parser/Makefile
	mkavi/Makefile
	test/Makefile )
